--- a/index.html
+++ b/index.html
@@ -370,35 +370,34 @@
         </div>
         <div class="col-sm">
 
-          <!--LiveInternet counter-->
-          <script type="text/javascript">
-            document.write("<a href='//www.liveinternet.ru/click' " +
-              "target=_blank><img src='//counter.yadro.ru/hit?t20.1;r" +
-              escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
-                ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
-                  screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
-              ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() +
-              "' alt='' title='LiveInternet: показано число просмотров за 24" +
-              " часа, посетителей за 24 часа и за сегодня' " +
-              "border='0' width='88' height='31'><\/a>")
-          </script>
-          <!--/LiveInternet-->
+		<!--LiveInternet counter--><script type="text/javascript">
+		document.write("<a href='//www.liveinternet.ru/click' "+
+		"target=_blank><img src='//counter.yadro.ru/hit?t26.4;r"+
+		escape(document.referrer)+((typeof(screen)=="undefined")?"":
+		";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+		screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+		";h"+escape(document.title.substring(0,150))+";"+Math.random()+
+		"' alt='' title='LiveInternet: показано число посетителей за"+
+		" сегодня' "+
+		"border='0' width='88' height='15'><\/a>")
+		</script><!--/LiveInternet-->
 
-          <!-- HotLog -->
-          <span id="hotlog_counter"></span>
-          <span id="hotlog_dyn"></span>
-          <script type="text/javascript">
-            var hot_s = document.createElement('script');
-            hot_s.type = 'text/javascript';
-            hot_s.async = true;
-            hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
-            hot_d = document.getElementById('hotlog_dyn');
-            hot_d.appendChild(hot_s);
-          </script>
-          <noscript>
-            <a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=501" border="0" alt="HotLog"></a>
-          </noscript>
-          <!-- /HotLog -->
+		<!-- HotLog -->
+		<span id="hotlog_counter"></span>
+		<span id="hotlog_dyn"></span>
+		<script type="text/javascript">
+		var hot_s = document.createElement('script');
+		hot_s.type = 'text/javascript'; hot_s.async = true;
+		hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
+		hot_d = document.getElementById('hotlog_dyn');
+		hot_d.appendChild(hot_s);
+		</script>
+		<noscript>
+		<a href="http://click.hotlog.ru/?2575836" target="_blank"><img
+		src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=501" border="0"
+		alt="HotLog"></a>
+		</noscript>
+		<!-- /HotLog -->
 
         </div>
       </div>
