--- a/index.html
+++ b/index.html
@@ -960,26 +960,31 @@
       <div class="row">
         <div class="col-sm">
 		
-        Телег/Фейс/Скай/Вайб/Вк/
+        <center>
+		Телег/Фейс/Скай/Вайб/Вк/
+		</center>
 		  
         </div>
         <div class="col-sm">
 		
+		<center>
 		<a href="http://sis.at.ua/forum/14" target="_blank">Обсуждение сайта</a>
+		</center>
 			
         </div>
         <div class="col-sm">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-		<a href="skype:webersis?chat" target="_blank"><p title="webersis"></p><i class="fa fa-skype fa-2x" aria-hidden="true"></i></a>
-		<a href="mailto:weber515sis@gmail.com" target="_blank"><p title="weber515sis@gmail.com"></p><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-		<a href="https://telegram.me/zakladki_top" target="_blank"><p title="Telegram"></p><i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
-		 
+		<center>
+		<a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-2x" aria-hidden="true"></i></a>
+		<a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-2x" aria-hidden="true"></i></a>
+		<a href="https://telegram.me/zakladki_top" target="_blank" title="Telegram: https://t.me/zakladki_top"><i class="fab fa-telegram fa-2x" aria-hidden="true"></i></a>
+		</center>		 
 		 
 		 
         </div>
         <div class="col-sm">
-
+		<center>
 		<!--LiveInternet counter--><script type="text/javascript">
 		document.write("<a href='//www.liveinternet.ru/click' "+
 		"target=_blank><img src='//counter.yadro.ru/hit?t26.4;r"+
@@ -1008,7 +1013,8 @@
 		width="1" height="1" alt="HotLog"></a>
 		</noscript>
 		<!-- /HotLog -->
-
+		</center>
+		
         </div>
       </div>
     </div>
